feat: WIP cv and working Media [HOOK FAIL OK] has vite doesn't have any update
