# swagger.json
@@ -184,7 +184,7 @@
         "operationId": "get_project_list",
         "responses": {
           "200": {
-            "description": "Project list.",
+            "description": "Content of the Project List.",
             "content": {
               "application/json": {
                 "schema": {
@@ -1722,16 +1722,16 @@
       "description": "Endpoints that return the content meant for the home page."
     },
     {
-      "name": "Project",
-      "description": "Return the content of the project list and page to be displayed."
-    },
-    {
       "name": "Media",
       "description": "Return the assets that are meant to be dynamically loaded and not a part of the static build."
     },
     {
       "name": "Page",
       "description": "Return the content of a page with a specific workflow turning shortPage into a full page."
+    },
+    {
+      "name": "Project",
+      "description": "Return the content of the project list and page to be displayed."
     }
   ]
 }
